--- a/static/css/style.css
+++ b/static/css/style.css
@@ -871,6 +871,13 @@ nav {
   gap: 10px;
 }
 
+@media (max-width: 500px) {
+  .newsletter-form {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 .newsletter-form input {
   padding: 10px;
   border-radius: 5px;
@@ -910,13 +917,13 @@ nav {
 }
 
 .social-icon:hover {
-  color: #60a5fa; /* Change color on hover */
+  color: #60a5fa; 
 }
 
 .footer-bottom {
   text-align: center;
   padding: 20px 0;
-  background-color: #111827; /* Darker background for the bottom */
+  background-color: #111827;
 }
 
 .footer-bottom p {
@@ -924,15 +931,15 @@ nav {
   font-size: 0.875rem;
 }
 
-/* Media Queries for Responsive Design */
+
 @media (max-width: 768px) {
   .footer-content {
-      flex-direction: column; /* Stack elements vertically */
+      flex-direction: column; 
       align-items: center;
       text-align: center;
   }
 
   .footer-links, .footer-about, .footer-contact, .footer-newsletter {
-      margin-right: 0; /* Reset margin for stacked items */
+      margin-right: 0;
   }
 }
