--- a/portfolio.css
+++ b/portfolio.css
@@ -385,4 +385,24 @@
   .project-link:hover, .project-demo:hover {
     background-color: #1d4ed8;
   }
+
+
+@media (max-width: 500px) {
+
+  .filter-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+.project-content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.project-content a {
+  width: 100%;
+  margin-bottom: 10px;
+}
+}
   
