--- a/static/css/style.css
+++ b/static/css/style.css
@@ -943,3 +943,23 @@ nav {
       margin-right: 0;
   }
 }
+
+
+@media (max-width: 500px) {
+
+  .filter-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+.project-content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.project-content a {
+  width: 100%;
+  margin-bottom: 10px;
+}
+}
